WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
56974
Services menu item to convert selected Simplified/Traditional Chinese Text is not working
https://bugs.webkit.org/show_bug.cgi?id=56974
Summary
Services menu item to convert selected Simplified/Traditional Chinese Text is...
Enrica Casucci
Reported
2011-03-23 16:33:08 PDT
Repro steps: 1. Launch Safari and navigate to
http://www.mozilla.org/editor/midasdemo/
2. Type "简体". 3. Control-click on the first character to bring up the context menu. 4. Choose "Convert Selected Simplified Chinese Text" Expected The character changes to 簡 Actual The character is unchanged.
Attachments
Patch
(2.90 KB, patch)
2011-03-23 16:43 PDT
,
Enrica Casucci
ap
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Enrica Casucci
Comment 1
2011-03-23 16:33:42 PDT
I believe this regressed in
http://trac.webkit.org/changeset/61794
where the readSelectionFromPasteboard method was removed from WebHTMLView.
Enrica Casucci
Comment 2
2011-03-23 16:43:50 PDT
Created
attachment 86719
[details]
Patch
Alexey Proskuryakov
Comment 3
2011-03-23 16:53:45 PDT
Comment on
attachment 86719
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=86719&action=review
> Source/WebKit/mac/ChangeLog:11 > + This methos and writeSelectionToPasteboard are needed to support Mac OS X
Typo: method.
> Source/WebKit/mac/WebView/WebHTMLView.mm:931 > +- (BOOL)readSelectionFromPasteboard:(NSPasteboard *)pasteboard
It would be good to add a comment explaining that this method is not unused (same for matching "write" one).
Alexey Proskuryakov
Comment 4
2011-03-23 16:54:31 PDT
<
rdar://problem/8284642
>
Enrica Casucci
Comment 5
2011-03-23 17:21:00 PDT
(In reply to
comment #3
)
> (From update of
attachment 86719
[details]
) > View in context:
https://bugs.webkit.org/attachment.cgi?id=86719&action=review
> > > Source/WebKit/mac/ChangeLog:11 > > + This methos and writeSelectionToPasteboard are needed to support Mac OS X > > Typo: method. > > > Source/WebKit/mac/WebView/WebHTMLView.mm:931 > > +- (BOOL)readSelectionFromPasteboard:(NSPasteboard *)pasteboard > > It would be good to add a comment explaining that this method is not unused (same for matching "write" one).
Done. Thanks for the review!
Enrica Casucci
Comment 6
2011-03-23 17:22:13 PDT
Committed
http://trac.webkit.org/changeset/81827
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug