Services menu item to convert selected Simplified/Traditional Chinese Text is not working. https://bugs.webkit.org/show_bug.cgi?id=56974 <rdar://problem/8284642>

Reviewed by Alexey Proskuryakov.

This fixes a regression introduced by http://trac.webkit.org/changeset/61794
where readSelectionFromPasteboard was accidentally removed.
This method and writeSelectionToPasteboard are needed to support Mac OS X
services.

* WebView/WebHTMLView.mm:
(-[WebHTMLView _pasteAsPlainTextWithPasteboard:]): Added.
(-[WebHTMLView readSelectionFromPasteboard:]): Added.



Canonical link: https://commits.webkit.org/71650@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@81827 268f45cc-cd09-0410-ab3c-d52691b4dbfc